<resources>
    <string name="app_name">StalkForces</string>
    <string name="rank">Rank</string>
    <string name="name">Name</string>
    <string name="handle">Handle</string>
    <string name="institute">Institute</string>
    <string name="contribution">Contribution</string>
    <string name="rating">Rating</string>
    <string name="email_id">Email id</string>
    <string name="place">Place</string>
    <string name="last_visit">Last Visit</string>
    <string name="friend_of">Friend of</string>
    <string name="registered">Registered</string>
    <string name="profile_photo">profile Photo</string>
    <string name="enter_handle">Enter Handle</string>
    <string name="arrow">→</string>
    <string name="pupil">Pupil</string>
    <string name="became">Became</string>
    <string name="digits">1235</string>
    <string name="sno">12</string>
    <string name="div_name">Codeforces Round #626 (Div. 1, based on Moscow Open Olympiad in Informatics)</string>
    <string name="contests">CONTESTS</string>
    <string name="s_i">#</string>
    <string name="contest_name">Contest</string>
    <string name="rating_change">Rating Change</string>
    <string name="new_Rating">New Rating</string>
    <string name="email">E-mail</string>
    <string name="btn_update">Update</string>
    <string name="action_sign_in_short">Register</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or register</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in Firebase now!</string>
    <string name="btn_link_to_login">Already registered. Let me login</string>
    <string name="btn_sign_out">Logout</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="btn_link_to_register_in">Not Registered?</string>
    <string name="upcoming_contest">Upcoming Contest</string>
    <string name="contest_names">Contest Name</string>
    <string name="date_and_time">Date and Time</string>
    <string name="duration">Duration</string>
    <string name="date">Date</string>
    <string name="set_reminder">Set Reminder</string>
    <string name="time">Time</string>
    <string name="textview">TextView</string>
    <string name="dateimage" />
    <string name="timeimage" />
    <string name="show_password">Show Password</string>
</resources>
